home-page is done

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
             </ul>
           </nav>
           <a class="logo-link" href="#home">
-            <img src="images/logo.png" alt="logo" class="logo-img">
+            <img src="images/home/logo.png" alt="logo" class="logo-img">
           </a>
           <nav class="menu">
             <ul class="menu__items">
@@ -47,23 +47,23 @@
           </nav>
           <input class="rightside-menu__input-checkbox" id="check" type="checkbox">
           <label class="header__btn" for="check">
-            <img class="header__btn-img" src="images/icon_menu.svg" alt="icon menu">
+            <img class="header__btn-img" src="images/home/icon_menu.svg" alt="icon menu">
           </label>
           <div id="rightside-menu" class="rightside-menu">
             <!-- <input class="rightside-menu__input-checkbox" id="check" type="checkbox"> -->
             <label class="rightside-menu__label" for="check">
-              <img class="rightside-menu__btn-close" src="images/close.svg" alt="close">
+              <img class="rightside-menu__btn-close" src="images/home/close.svg" alt="close">
               <!-- <button class="rightside-menu__btn"></button> -->
             </label>
             <div class="rightside-menu__content">
-              <img class="rightside-menu__content-logo" src="images/logo-big.png" alt="">
+              <img class="rightside-menu__content-logo" src="images/home/logo-big.png" alt="">
               <h4 class="rightside-menu__content-title">Furniture for life</h4>
               <p class="rightside-menu__content-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi nisi corporis, amet placeat rem,
                 veniam provident sunt dolor ad nihil. Soluta vitae obcaecati mollitia quod provident ea, molestias qui
                 quidem, repellat fuga unde, eligendi repudiandae dolore maxime modi corporis?
               </p>
-              <img class="rightside-menu__content-img" src="images/r-s_img.jpg" alt="">
+              <img class="rightside-menu__content-img" src="images/home/r-s_img.jpg" alt="">
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main-chair.png" alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/home/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -93,7 +93,7 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main-chair.png" alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/home/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -108,7 +108,7 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main-chair.png" alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/home/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -141,21 +141,21 @@
 
             <div class="about__slider">
               <div class="about__slide">
-                <img class="about__image" src="./images/about-img-1.jpg" alt="">
+                <img class="about__image" src="./images/home/about-img-1.jpg" alt="">
                 <div class="about__slide-content">
                   <p class="about__slide-content__title">Truffaut literally trust</p>
                   <span class="about__slide-content__text">Living room furntiture | Chair</span>
                 </div>
               </div>
               <div class="about__slide">
-                <img class="about__image" src="./images/about-img-2.jpg" alt="">
+                <img class="about__image" src="./images/home/about-img-2.jpg" alt="">
                 <div class="about__slide-content">
                   <p class="about__slide-content__title">Truffaut literally trust</p>
                   <span class="about__slide-content__text">Living room furntiture | Chair</span>
                 </div>
               </div>
               <div class="about__slide">
-                <img class="about__image" src="./images/about-img-3.jpg" alt="">
+                <img class="about__image" src="./images/home/about-img-3.jpg" alt="">
                 <div class="about__slide-content">
                   <p class="about__slide-content__title">Truffaut literally trust</p>
                   <span class="about__slide-content__text">Living room furntiture | Chair</span>
@@ -163,21 +163,21 @@
               </div>
 
               <div class="about__slide">
-                <img class="about__image" src="./images/about-img-4.jpg" alt="">
+                <img class="about__image" src="./images/home/about-img-4.jpg" alt="">
                 <div class="about__slide-content">
                   <p class="about__slide-content__title">Truffaut literally trust</p>
                   <span class="about__slide-content__text">Living room furntiture | Chair</span>
                 </div>
               </div>
               <div class="about__slide">
-                <img class="about__image" src="./images/about-img-5.jpg" alt="">
+                <img class="about__image" src="./images/home/about-img-5.jpg" alt="">
                 <div class="about__slide-content">
                   <p class="about__slide-content__title">Truffaut literally trust</p>
                   <span class="about__slide-content__text">Living room furntiture | Chair</span>
                 </div>
               </div>
               <div class="about__slide">
-                <img class="about__image" src="./images/about-img-3.jpg" alt="">
+                <img class="about__image" src="./images/home/about-img-3.jpg" alt="">
                 <div class="about__slide-content">
                   <p class="about__slide-content__title">Truffaut literally trust</p>
                   <span class="about__slide-content__text">Living room furntiture | Chair</span>
@@ -253,13 +253,13 @@
 
             <div class="gallery__images">
               <div class="gallery__left">
-                <img class="galler__left-image" src="./images/gallery-img-1.jpg" alt="gallery img">
+                <img class="galler__left-image" src="./images/home/gallery-img-1.jpg" alt="gallery img">
               </div>
               <div class="gallery__right">
-                <img class="gallery__right-image" src="./images/gallery-img-2.jpg" alt="gallery img">
-                <img class="gallery__right-image" src="./images/gallery-img-3.jpg" alt="gallery img">
-                <img class="gallery__right-image" src="./images/gallery-img-4.jpg" alt="gallery img">
-                <img class="gallery__right-image" src="./images/gallery-img-5.jpg" alt="gallery img">
+                <img class="gallery__right-image" src="./images/home/gallery-img-2.jpg" alt="gallery img">
+                <img class="gallery__right-image" src="./images/home/gallery-img-3.jpg" alt="gallery img">
+                <img class="gallery__right-image" src="./images/home/gallery-img-4.jpg" alt="gallery img">
+                <img class="gallery__right-image" src="./images/home/gallery-img-5.jpg" alt="gallery img">
               </div>
             </div>
 
@@ -276,7 +276,7 @@
             <div class="blog__posts">
               <div class="blog__post">
                 <a class="blog__post-link" href="">
-                  <img class="blog__post-image" src="./images/blog-1.jpg" alt="post img">
+                  <img class="blog__post-image" src="./images/home/blog-1.jpg" alt="post img">
                 </a>
                 <span class="blog__post-category">
                   March 12, 2020 | by Ann Summers | Inrerior
@@ -289,7 +289,7 @@
               </div>
               <div class="blog__post">
                 <a class="blog__post-link" href="">
-                  <img class="blog__post-image" src="./images/blog-2.jpg" alt="post img">
+                  <img class="blog__post-image" src="./images/home/blog-2.jpg" alt="post img">
                 </a>
                 <span class="blog__post-category">
                   September 28,2020 | by Finnagan Morningstar | Dining room interior
