about-page (last section is progress-bar)

--- a/app/index.html
+++ b/app/index.html
@@ -25,23 +25,23 @@
           <nav class="menu">
             <ul class="menu__items">
               <li class="menu__item-list">
-                <a class="menu__list-link" href="#about">About</a>
+                <a class="menu__list-link" href="about.html">About</a>
               </li>
               <li class="menu__item-list">
-                <a class="menu__list-link" href="#gallery">Gallery</a>
+                <a class="menu__list-link" href="gallery.html">Gallery</a>
               </li>
             </ul>
           </nav>
-          <a class="logo-link" href="#home">
+          <a class="logo-link" href="index.html">
             <img src="images/home/logo.png" alt="logo" class="logo-img">
           </a>
           <nav class="menu">
             <ul class="menu__items">
               <li class="menu__item-list">
-                <a class="menu__list-link" href="#blog">Blog</a>
+                <a class="menu__list-link" href="blog.html">Blog</a>
               </li>
               <li class="menu__item-list">
-                <a class="menu__list-link" href="#footer">Contact</a>
+                <a class="menu__list-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -69,7 +69,9 @@
         </div>
       </div>
     </header>
+
     <main class="main">
+      
       <section id="home" class="main-content">
         <div class="container-middle">
           <div class="main-content__inner">
@@ -364,13 +366,10 @@
 
 
 
-  <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script> -->
-  <!-- <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
   <script src="js/main.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="js/slick.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script> -->
-  <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+
 </body>
 
 </html>
