about-page is completed

--- a/app/about.html
+++ b/app/about.html
@@ -119,21 +119,84 @@
 
             <section class="video-review ">
                 <div class="container-max">
-                    <div class="video-review__video">
-                        
+                    <div class="video-review__inner">
+                        <div class="video-review__video"></div>
                     </div>
                 </div>
+            </section>
+
+            <section class="progressbar">
+                <div class="container-max">
+                    <div class="progressbar__bg">
+                        <div class="container-middle">
+                            <div class="progressbar__inner">
+                                <div class="progressbar__chair">
+                                    <img class="progressbar__chair-img" src="images/about/green_chair.png" alt="">
+                                </div>
+                                <div class="progressbar__content">
+                                    <h3 class="progressbar__content-title">Our Inspiration in details</h3>
+                                    <p class="progressbar__content-text">Semiotics fixie four dollar toast, next level
+                                        woke
+                                        scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key
+                                        cornhole, banh mi thundercats gochujang keytar.
+                                    </p>
+
+                                    <div class="progressbar__items-wrapper">
+                                        <div class="progressbar__item">
+                                            <div class="progressbar__item-desc">
+                                                <p class="progressbar__item-name">Design and technical drawings</p>
+                                                <p class="progressbar__item-percent">80%</p>
+                                            </div>
+                                            <div class="progressbar__item-minus">
+                                                <span class="progressbar__item-plus" style="width: 80%;"></span>
+                                            </div>
+                                        </div>
+                                        <div class="progressbar__item">
+                                            <div class="progressbar__item-desc">
+                                                <p class="progressbar__item-name">Measurments</p>
+                                                <p class="progressbar__item-percent">70%</p>
+                                            </div>
+                                            <div class="progressbar__item-minus">
+                                                <span class="progressbar__item-plus" style="width: 70%;"></span>
+                                            </div>
+                                        </div>
+
+                                        <div class="progressbar__item">
+                                            <div class="progressbar__item-desc">
+                                                <p class="progressbar__item-name">Furniture functionality analysis</p>
+                                                <p class="progressbar__item-percent">75%</p>
+                                            </div>
+                                            <div class="progressbar__item-minus">
+                                                <span class="progressbar__item-plus" style="width: 75%;"></span>
+                                            </div>
+                                        </div>
+                                        <div class="progressbar__item">
+                                            <div class="progressbar__item-desc">
+                                                <p class="progressbar__item-name">Interior visualization</p>
+                                                <p class="progressbar__item-percent">40%</p>
+                                            </div>
+                                            <div class="progressbar__item-minus">
+                                                <span class="progressbar__item-plus" style="width: 40%;"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </section>
 
             <section class="partners">
                 <div class="container-max">
                     <div class="partners__inner">
                         <div class="partners__items">
-                            <!-- <img class="partners__images" src="images/about/partners-blush.svg" alt="" > -->
-                            <img class="partners__images" src="images/about/partners-bahnuk.svg" alt="" >
-                            <img class="partners__images" src="images/about/partners-blush.svg" alt="" >
-                            <img class="partners__images" src="images/about/partners-bahnuk.svg" alt="" >
-                            <!-- <img class="partners__images" src="images/about/partners-blush.svg" alt="" > -->
+                            <!-- <img class="partners__images" src="images/about/partners-blush.svg" alt=""> -->
+                            <img class="partners__images" src="images/about/partners-bahnuk.svg" alt="">
+                            <img class="partners__images" src="images/about/partners-blush.svg" alt="">
+                            <img class="partners__images" src="images/about/partners-bahnuk.svg" alt="">
+                            <!-- <img class="partners__images" src="images/about/partners-blush.svg" alt=""> -->
                         </div>
                     </div>
                 </div>
@@ -200,16 +263,7 @@
             </section>
 
             <div class="wr">
-                <div class="pad">
-                    <div class="progress-bar">
-                        <span class="progress-bar-fill" style="width: 80%;"></span>
-                    </div>
-                </div>
-                <div class="pad">
-                    <div class="progress-bar">
-                        <span class="progress-bar-fill" style="width: 80%;"></span>
-                    </div>
-                </div>
+
             </div>
 
         </main>
