--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
                   <img class="main-content__left-img" src="images/home/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
-                  <h1 class="main-content__right-title">Furniture collection</h1>
+                  <h1 class="main-content__right-title">Furniture <br> of future</h1>
                   <p class="main-content__right-text">
                     Deep v you probably haven't heard of them banh mi synth actually affogato. <br>
                     Aesthetic lyft ethical
@@ -113,7 +113,7 @@
                   <img class="main-content__left-img" src="images/home/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
-                  <h1 class="main-content__right-title">Furniture collection</h1>
+                  <h1 class="main-content__right-title">Furniture <br> of dreams</h1>
                   <p class="main-content__right-text">
                     Deep v you probably haven't heard of them banh mi synth actually affogato. <br>
                     Aesthetic lyft ethical
@@ -128,7 +128,6 @@
 
           </div>
         </div>
-        <div class="main-content__bottom-line"></div>
       </section>
 
       <section id="about" class="about">
