gallery-page is copmleted

--- a/app/about.html
+++ b/app/about.html
@@ -78,7 +78,8 @@
                     <div class="container">
                         <div class="about-heading__breakpoints">
                             <span class="breakpoints__text">
-                                <a href="index.html">Home</a> / <a href="about.html">About</a></span>
+                                <a href="index.html">Home</a> / <a href="about.html">About</a>
+                            </span>
                         </div>
                         <div class="about-heading__inner">
                             <div class="about-heading__content">
