--- a/app/index.html
+++ b/app/index.html
@@ -254,7 +254,7 @@
 
             <div class="gallery__images">
               <div class="gallery__left">
-                <img class="galler__left-image" src="./images/home/gallery-img-1.jpg" alt="gallery img">
+                <img class="gallery__left-image" src="./images/home/gallery-img-1.jpg" alt="gallery img">
               </div>
               <div class="gallery__right">
                 <img class="gallery__right-image" src="./images/home/gallery-img-2.jpg" alt="gallery img">
