--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desire</title>
+  <link rel="icon" type="image/png" href="images/home/desire-icon.ico" />
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="css/slick.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
