content side of blog-page is copmleted

--- a/app/about.html
+++ b/app/about.html
@@ -73,17 +73,17 @@
         </header>
 
         <main class="main">
-            <section class="about-heading container-max">
-                <div class="about-heading__bg-color">
+            <section class="about-page container-max">
+                <div class="about-page__bg-color">
                     <div class="container">
-                        <div class="about-heading__breakpoints">
+                        <div class="about-page__breakpoints">
                             <span class="breakpoints__text">
                                 <a href="index.html">Home</a> / <a href="about.html">About</a>
                             </span>
                         </div>
-                        <div class="about-heading__inner">
-                            <div class="about-heading__content">
-                                <h2 class="about-heading__title">
+                        <div class="about-page__inner">
+                            <div class="about-page__content">
+                                <h2 class="about-page__title">
                                     About Us</h2>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
 
             <section class="about-gallery">
                 <div class="container-max">
-                    <div class="about-gallery__inner">
+                    <div class="about-gallery__inner" >
 
                         <div class="about-gallery__slider">
                             <div class="about-gallery__slide">
