--- a/app/page.html
+++ b/app/page.html
@@ -71,19 +71,7 @@
     </header>
 
     <main class="main">
-      <section class="contact-page">
-        <div class="contact-page__breakpoints">
-          <div class="container">
-            <span class="breakpoints__text">
-              <a href="index.html">Home</a> / <a href="contact.html">Contact</a>
-            </span>
-          </div>
-        </div>
-        <div class="container">
-          <div class="contact-page__inner">
-
-          </div>
-        </div>
+      PAGE
       </section>
 
 
