blog-page is copmleted

--- a/app/blog.html
+++ b/app/blog.html
@@ -100,24 +100,22 @@
                 </div>
               </article>
 
-
-
               <article class="blog-page__post">
-                  <div id="play-video" class="video-wrapper">
-                    <iframe width="100%" height="415px" id="video" class="video"
+                <div id="play-video" class="video-wrapper">
+                  <!--https://www.youtube.com/embed/lva-NBdwhDA?controls=0&amp;start=5-->
+                  <iframe width="100%" height="415px" id="video" class="video"
                     src="https://www.youtube.com/embed/lva-NBdwhDA?controls=0&amp;start=5" title="YouTube video player"
                     el="0" enablejsapi="1" controls="0" frameborder="0" frameborder="0" loop='0' modestbranding="1"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                   </iframe>
-                  </div>
-                  <div class="blog-page__post-desc">
-                    <span class="blog-page__post-category">August 12, 2020 | by Lux Morningstar | Design</span>
-                    <h1 class="blog-page__post-title">Authentic kogi shabby chic</h1>
+                </div>
+                <div class="blog-page__post-desc">
+                  <span class="blog-page__post-category">August 12, 2020 | by Lux Morningstar | Design</span>
+                  <h1 class="blog-page__post-title">Authentic kogi shabby chic</h1>
 
-                  </div>
+                </div>
               </article>
-
 
               <article class="blog-page__post">
                 <div class="blog-page__post-slider">
@@ -142,7 +140,81 @@
 
 
 
-            <aside class="sidebar">h</aside>
+            <aside class="sidebar">
+              <div class="sidebar__input-container">
+                <input class="sidebar__input-search" type="search" placeholder="Search">
+                <button class="sidebar__search-btn" type="submit">
+                  <img src="./images/blog/search-icon.svg" alt="">
+                </button>
+              </div>
+
+              <div class="sidebar__categories">
+                <p class="sidebar__categories-title">Categories</p>
+                <ul class="sidebar__categories-list">
+                  <li class="sidebar__categories-item">Dining room (1)</li>
+                  <li class="sidebar__categories-item">Office furniture (12)</li>
+                  <li class="sidebar__categories-item">Simple interiror design (2)</li>
+                  <li class="sidebar__categories-item">Design (4)</li>
+                  <li class="sidebar__categories-item">Bedroom Furniture (1)</li>
+                </ul>
+              </div>
+
+              <div class="sidebar__recent-posts">
+                <p class="sidebar__recent-posts-title">Recent Posts</p>
+                <ul class="sidebar__recent-posts-list">
+                  <li class="sidebar__recent-posts-item">
+                    <p class="sidebar__recent-posts-text"><a class="sidebar__recent-posts-link" href="">
+                        Cred selfies edison bulb four dollar toast humblebrag.</a>
+                    </p>
+                    <span class="sidebar__recent-posts-category">August 10, 2020 | by Ann Summers</span>
+                  </li>
+                  <li class="sidebar__recent-posts-item">
+                    <p class="sidebar__recent-posts-text"><a class="sidebar__recent-posts-link" href="">
+                        Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth.</a>
+                    </p>
+                    <span class="sidebar__recent-posts-category">September 30 ,2020 | by Ann Summers</span>
+                  </li>
+                  <li class="sidebar__recent-posts-item">
+                    <p class="sidebar__recent-posts-text"><a class="sidebar__recent-posts-link" href="">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.</a>
+                    </p>
+                    <span class="sidebar__recent-posts-category">May 2, 2020 | by Ann Summers</span>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="sidebar__tags">
+                <p class="sidebar__tags-title">Tags</p>
+                <ul class="sidebar__tags-list">
+                  <li class="sidebar__tags-item"><button class="sidebar__tags-btn">Dining room futniture</button></li>
+                  <li class="sidebar__tags-item"><button class="sidebar__tags-btn">Chair</button></li>
+                  <li class="sidebar__tags-item"><button class="sidebar__tags-btn">Table</button></li>
+                  <li class="sidebar__tags-item"><button class="sidebar__tags-btn">Bedroom</button></li>
+                  <li class="sidebar__tags-item"><button class="sidebar__tags-btn">Office Furniture</button></li>
+                </ul>
+              </div>
+
+              <div class="sidebar__social">
+                <ul class="sidebar__social-list">
+                  <li class="sidebar__item"><a class="sidebar__social-link" href="#">
+                      <img class="sidebar__social-img" src="images/blog/facebook.svg" alt=""></a>
+                  </li>
+                  <li class="sidebar__item"><a class="sidebar__social-link" href="#">
+                      <img class="sidebar__social-img" src="images/blog/instagram.svg" alt=""></a>
+                  </li>
+                  <li class="sidebar__item"><a class="sidebar__social-link" href="#">
+                      <img class="sidebar__social-img" src="images/blog/pinterest.svg" alt=""></a>
+                  </li>
+                  <li class="sidebar__item"><a class="sidebar__social-link" href="#">
+                      <img class="sidebar__social-img" src="images/blog/whatsapp.png" alt=""></a>
+                  </li>
+                  <li class="sidebar__item"><a class="sidebar__social-link" href="#">
+                      <img class="sidebar__social-img" src="images/blog/twitter.svg" alt=""></a>
+                  </li>
+                </ul>
+              </div>
+
+            </aside>
           </div>
         </div>
       </section>
